--- a/spot-core/.settings/org.eclipse.wst.common.component
+++ b/spot-core/.settings/org.eclipse.wst.common.component
@@ -7,5 +7,6 @@
         <wb-resource deploy-path="/" source-path="/src/gen/java"/>
         <wb-resource deploy-path="/" source-path="/src/gen/resource"/>
         <wb-resource deploy-path="/" source-path="/src/gen/resources"/>
+        <wb-resource deploy-path="/" source-path="/src/test/java"/>
     </wb-module>
 </project-modules>
