--- a/spot-spring-web-support/.settings/org.eclipse.wst.common.component
+++ b/spot-spring-web-support/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="spot-spring-web-support">
         <wb-resource deploy-path="/" source-path="/src/main/java"/>
         <wb-resource deploy-path="/" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/" source-path="/src/test/resources"/>
         <wb-resource deploy-path="/" source-path="/src/test/java"/>
     </wb-module>
 </project-modules>
