--- a/spot-core-maven-plugins/src/main/resources/templates/item.vm
+++ b/spot-core-maven-plugins/src/main/resources/templates/item.vm
@@ -1,7 +1,8 @@
 /**
  * This file is auto-generated. All changes will be overwritten.
  */
-package $packageName;
+ 
+package $packagepath;
 
 #if( ! $superclassName)
 import java.io.Serializable;
