--- a/spot-core-maven-plugins/src/main/resources/templates/enum.vm
+++ b/spot-core-maven-plugins/src/main/resources/templates/enum.vm
@@ -2,7 +2,7 @@
  * This file is auto-generated. All changes will be overwritten.
  */
 
-package $packagepath;
+package _.$packagepath;
 
 #foreach($i in $imports)
 import $i;
