--- a/spot-core-maven-plugins/src/main/resources/templates/class.vm
+++ b/spot-core-maven-plugins/src/main/resources/templates/class.vm
@@ -65,7 +65,7 @@ public #if ($isAbstract)abstract #end class $name #if($superClass.name)extends $
 	#foreach ($field in $fields)
 		#javadoc($field.javadoc)
 		#annotations($field.annotations)
-		protected $field.type.name#genericTypeArguments($field.type.genericArguments) $field.name;
+		protected $field.type.name#genericTypeArguments($field.type.genericArguments) $field.name #if($field.assignement) = $field.assignement #end;
 	#end
 
 ##    @Property(isReference = true)
