small thymleaf rendering fixes

--- a/spot-cms-base/src/main/resources/templates/exception.html
+++ b/spot-cms-base/src/main/resources/templates/exception.html
@@ -78,15 +78,20 @@ footer {
 	left: 0;
 	bottom: 0;
 	color: #a0a0a0;
-	font-size: 14px
+	font-size: 14px;
+	background-color: black;
 }
 
 .stacktrace {
+	margin-left: auto !important;
+	margin-right: auto !important;
 	text-align: left;
 	margin-left: 40px;
 	margin-right: 40px;
 	white-space: pre;
 	margin-bottom: 40px;
+	max-width: 800px;
+	overflow: scroll;
 }
 
 </style>
