--- a/spot-cms-base/src/main/resources/templates/page.html
+++ b/spot-cms-base/src/main/resources/templates/page.html
@@ -4,7 +4,7 @@
  */-->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-	th:replace="${this.getProperty('layout').getProperty('renderTemplateFile')}">
+	th:replace="${this.get('layout').get('renderTemplateFile')}">
 <body>
 	<!-- CMS page placeholder -->
 </body>
