--- a/spot-cms-base/src/main/resources/templates/components/htmlcomponent.html
+++ b/spot-cms-base/src/main/resources/templates/components/htmlcomponent.html
@@ -1,3 +1,3 @@
-<div class="html-content" th:utext="${this.getProperty('content')}">
+<div class="html-content" th:utext="${this.get('content')}">
 	The HTML content
 </div>
