--- a/spot-maven-plugin/src/main/resources/templates/enum.vm
+++ b/spot-maven-plugin/src/main/resources/templates/enum.vm
@@ -15,6 +15,11 @@ package $packagePath;
 public enum $name {
 
 	#foreach($value in $values)
+		#if ( $!description )
+			/**
+			 * $description
+			 */
+		#end
 		$value.name ( #if($value.internalName ) "$value.internalName" #else "$value.name"  #end )
 		#if( $foreach.hasNext ), #end
 	#end ;
