--- a/spot-maven-plugin/src/main/resources/templates/class.vm
+++ b/spot-maven-plugin/src/main/resources/templates/class.vm
@@ -90,7 +90,7 @@ $visibility.toLowerCase() #if ($abstract)abstract #end class $name #if($superCla
 		#annotations($method.annotations)
 		$method.visibility.toLowerCase() #modifiers($method.methodModifiers) #modifiers($method.modifiers) #if($method.type) $method.type.name #if($method.type.array) []#end #end #genericTypeArguments($method.type.genericArguments) $method.name (
 			#foreach ( $arg in $method.arguments )
-				$arg.type.name#if($arg.type.array) []#end #genericTypeArguments($arg.type.genericArguments) $arg.name
+				#annotations($arg.annotations) $arg.type.name#if($arg.type.array) []#end #genericTypeArguments($arg.type.genericArguments) $arg.name
 				#if( $foreach.hasNext ), #end
 			#end
 		) {
